--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
   </body>
 
   <script src="marquee3k.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/fetch/2.0.2/fetch.min.js"></script>
   <script>
     var news = document.getElementById('news');
     var massive = document.querySelector('.massive');
