🎧 Edits demo page

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
       <div class="marquee3k vert vert--back" data-vertical="true" data-reverse="true">Marquees are back</div>
       <div class="marquee3k diagonal">Get creative</div>
 
-      <div class="marquee3k massive">MARQUEE3000</div>
+      <div class="marquee3k massive" data-speed="200">MARQUEE3000</div>
     </main>
   </body>
 
