--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
   <head>
     <title>MARQUEE3000</title>
     <meta charset="UTF-8">
+    <meta name="Description" content="Javascript marquees for the new millennium.">
+    <meta name="Keywords" content="marquee, marquees, javascript, plugin">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="style.css" rel="stylesheet">
   </head>
@@ -111,5 +113,14 @@
     massiveToggle.addEventListener('mouseleave', function() {
       massive.classList.remove('is-active');
     });
+  </script>
+  <script>
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+    ga('create', 'UA-92516498-1', 'auto');
+    ga('send', 'pageview');
   </script>
 </html>
