Updates with pausable marquee

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
       </div>
       <div class="marquee3k">No dependencies at 2kb</div>
       <div class="marquee3k">Horizontal Vertical Delay Reverse Speed RandomSpeed</div>
+      <div class="marquee3k" data-pausable="true">Hover on this marquee, it's pausable!</div>
       <div class="marquee3k">
         Images or HTML is fine
       </div>
