--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
       <div class="marquee3k">
         Images or HTML is fine
       </div>
+      <div class="marquee3k site-link">
+        <a href="http://ezekielaquino.com">Visit my website and write on my guestbook. Yes a guest book you heard that right!</a>
+      </div>
       <div class="marquee3k">새로운 밀레니엄에 대한 internet marquees</div>
       <div class="marquee3k">Ang marquee para sa bagong milenyo</div>
       <div class="marquee3k">Marquees voor het nieuwe millennium</div>
